# clipboard-dongle

./: .gitignore  README.md  main.py  pyproject.toml
circuitpython/: boot.py  dns_captive.py  main.html  main.py  pages.py  pins.py  replace.csv  settings.toml.tpl
circuitpython/static/: app.js  index.html  style.css
host/: usb_driver.py
scripts/: circuitpython_repl.sh
